--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
     <link rel="stylesheet" href="css/vendor/swiper-bundle.min.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Grace Nursing Services</title>
+    <style>
+        @media only screen and(max-width: 790px) {
+            .header {
+                display: none;
+            }
+        }
+    </style>
 </head>
 
 <body>
@@ -25,7 +32,7 @@
     <script src="js/vendor/isotope.pkgd.min.js"></script>
 
     <!-- Header -->
-    <section class="bg-accent-color-1 py-3">
+    <section class="bg-accent-color-1 py-3 header">
         <div class="r-container">
             <div class="d-flex flex-lg-row flex-column justify-content-lg-between justify-content-center gap-3">
                 <ul class="d-flex m-0 flex-lg-row flex-column justify-content-center align-items-center gap-3 text-white font-2 text-center text-lg-start"
