--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                                 <a class="nav-link" href="contact.html">Contact Us</a>
                             </li>
                         </ul>
-                        <a href="#" type="button" class="btn button bg-accent-color" type="submit">Book An
+                        <a href="tel:08052366649" type="button" class="btn button bg-accent-color" type="submit">Book An
                             Appointment</a>
                     </div>
                 </div>
@@ -106,8 +106,9 @@
                 <div class="d-flex flex-column justify-content-center gap-3 h-100 position-relative"
                     style="max-width: 768px; z-index: 2;">
                     <h1 class="text-title text-white fw-bold font-1 lh-1">Grace Nursing <br>Service</h1>
-                    <p class="text-white f-18 text-font">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                    <p class="text-white f-18 text-font">At Grace Home Care, we are ready to serve you excellently.<br>
+                    Diagnosis and prescription is done by the doctor, nurses render care to you.
+                    </p>
                     <div>
                         <a type="button" href="about_us.html"
                             class="btn bg-accent-color text-font rounded-0">LEARN MORE</a>
@@ -179,24 +180,22 @@
                     <div class="col mb-3">
                         <div class="d-flex flex-column gap-3 p-3">
                             <h6 class="accent-color font-2 ">Welcome To Grace Nursing </h6>
-                            <h3 class="text-black font-1 lh-1 fw-semibold">Would Source Out write Ups Soon, for dummy txt
+                            <h3 class="text-black font-1 lh-1 fw-semibold">We Offers Hourly | 12hours, 24hours/Live-in-care:
                             </h3>
                             <p class="text-gray">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vel dolor felis. In
-                                ligula purus, imperdiet ac est nec, tempus varius nisl. Integer et venenatis odio. Fusce
-                                enim lectus, gravida ut justo sed, molestie fermentum libero.
+                                Ensuring maximum total nursing care is rendered to our client's at the comfort of their homes or preferred locations ✈.
                             </p>
                             <div class="row row-cols-2">
                                 <div class="col mb-2">
                                     <div class="d-flex flex-row gap-2 align-items-center">
                                         <i class="fa-solid fa-circle-arrow-right accent-color"></i>
-                                        <span class="text-gray">Nulla mollis tristique blandit</span>
+                                        <span class="text-gray">Giving of Injecttions, medications.</span>
                                     </div>
                                 </div>
                                 <div class="col mb-2">
                                     <div class="d-flex flex-row gap-2 align-items-center">
                                         <i class="fa-solid fa-circle-arrow-right accent-color"></i>
-                                        <span class="text-gray">Mauris eu ante euismod</span>
+                                        <span class="text-gray">Care of the Elderly.</span>
                                     </div>
                                 </div>
                                 <div class="col mb-2">
@@ -209,19 +208,20 @@
                                 <div class="col mb-2">
                                     <div class="d-flex flex-row gap-2 align-items-center">
                                         <i class="fa-solid fa-circle-arrow-right accent-color"></i>
-                                        <span class="text-gray">Nulla mollis tristique blandit</span>
+                                        <span class="text-gray">Getting Consultation at home</span>
                                     </div>
                                 </div>
                                 <div class="col mb-2">
                                     <div class="d-flex flex-row gap-2 align-items-center">
                                         <i class="fa-solid fa-circle-arrow-right accent-color"></i>
-                                        <span class="text-gray">Mauris eu ante euismod</span>
+                                        <span class="text-gray">Monitoring patients (young and old) till fully recovered both home and abroad.</span>
                                     </div>
                                 </div>
                                 <div class="col mb-2">
                                     <div class="d-flex flex-row gap-2 align-items-center">
                                         <i class="fa-solid fa-circle-arrow-right accent-color"></i>
-                                        <span class="text-gray">Proin euismod mollis ex vel
+                                        <span class="text-gray">Providing services 
+                                            for patients who needs to travel and require a medical personnel to be in close watch.
                                         </span>
                                     </div>
                                 </div>
@@ -235,7 +235,7 @@
                                             style="font-size: 20px; width: 3rem; height: 3rem;">
                                             <i class="fa-solid fa-user-doctor"></i>
                                         </div>
-                                        <span class="font-1 fs-3 lh-1 fw-semibold">Expert Nursing Staff</span>
+                                        <span class="font-1 fs-3 lh-1 fw-semibold">Expert Nursing Staff (No-Quacks)</span>
                                     </div>
                                 </div>
                                 <div class="col mb-3">
@@ -262,9 +262,8 @@
                     <h6 class="accent-color font-2 ">Types Of Care</h6>
                     <h3 class="text-black font-1 lh-1 fw-semibold">Providing Quality Senior Care</h3>
                     <p class="text-gray mx-auto" style="max-width: 768px;">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vel dolor felis. In ligula
-                        purus, imperdiet ac est nec, tempus varius nisl. Integer et venenatis odio. Fusce enim lectus,
-                        gravida ut justo sed.
+                        @GraceHomeCare recognizes that many of our patients need specialized care. That's why we have a group of nurses who are certified to treat<br>
+                        which will help patients achieve the best possible treatment outcomes by Education and treatment regimens to ensure healing.
                     </p>
                     <div class="row row-cols-1 row-cols-lg-3">
                         <div class="col">
@@ -272,8 +271,8 @@
                                 <img src="image/5961052.jpg" class="card-img-top rounded-3" alt="...">
                                 <div class="card-body ">
                                     <h5 class="font-1 fw-bold">Home Care</h5>
-                                    <p class="text-gray">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut
-                                        elit tellus, luctus nec.</p>
+                                    <p class="text-gray">Experience compassionate and personalized home care with Grace Home Care. 
+                                        </p>
                                     <div class="d-flex justify-content-center">
                                         <a type="button" href="single_service.html"
                                             class="btn post-button font-2 d-flex flex-row align-items-center gap-2">Read
@@ -287,8 +286,7 @@
                                 <img src="image/img3.jpg" class="card-img-top rounded-3" alt="...">
                                 <div class="card-body ">
                                     <h5 class="font-1 fw-bold">Aged Care</h5>
-                                    <p class="text-gray">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut
-                                        elit tellus, luctus nec.</p>
+                                    <p class="text-gray">Discover compassionate and tailored aged care solutions at Grace Home Care.</p>
                                     <div class="d-flex justify-content-center">
                                         <a type="button" href="single_service.html"
                                             class="btn post-button font-2 d-flex flex-row align-items-center gap-2">Read
@@ -302,8 +300,8 @@
                                 <img src="image/img2.jpg" class="card-img-top rounded-3" alt="...">
                                 <div class="card-body ">
                                     <h5 class="font-1 fw-bold">Nursing Agency</h5>
-                                    <p class="text-gray">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut
-                                        elit tellus, luctus nec.</p>
+                                    <p class="text-gray"> Contact us today to learn how our nursing agency can meet your 
+                                        staffing needs and elevate the standard of care in your healthcare organization.</p>
                                     <div class="d-flex justify-content-center">
                                         <a type="button" href="single_service.html"
                                             class="btn post-button font-2 d-flex flex-row align-items-center gap-2">Read
@@ -342,28 +340,23 @@
                                 <div class="col col-lg-8">
                                     <div class="d-flex flex-column ps-3">
                                         <p>
-                                            Nullam porttitor metus justo, sit amet luctus arcu consequat a. Fusce
-                                            iaculis
-                                            leo a augue malesuada pharetra. Fusce porta porttitor odio vel placerat.
-                                            Etiam
-                                            vitae lacus finibus,
+                                            Our commitment to compassion drives us to go above and beyond,
+                                             enriching lives and fostering meaningful connections. 
+                                            Experience the difference of compassionate care with us, 
+                                            where your needs are met with genuine empathy and heartfelt dedication.
                                         </p>
                                         <div class="d-flex flex-column gap-2">
                                             <div class="d-flex flex-row gap-2 align-items-center">
                                                 <i class="fa-solid fa-square-check accent-color"></i>
-                                                Suspendisse porta porttitor rhoncus
+                                                Physiotherapy
                                             </div>
                                             <div class="d-flex flex-row gap-2 align-items-center">
                                                 <i class="fa-solid fa-square-check accent-color"></i>
-                                                Etiam dictum condimentum metus
+                                                Skilled Nursing Services
                                             </div>
                                             <div class="d-flex flex-row gap-2 align-items-center">
                                                 <i class="fa-solid fa-square-check accent-color"></i>
-                                                Proin blandit sodales diam facilisis
-                                            </div>
-                                            <div class="d-flex flex-row gap-2 align-items-center">
-                                                <i class="fa-solid fa-square-check accent-color"></i>
-                                                Class aptent taciti sociosqu ad
+                                                Prescription management
                                             </div>
                                         </div>
                                     </div>
@@ -394,21 +387,21 @@
                     <div class="col">
                         <div
                             class="card with-border-bottom border-0 shadow d-flex flex-column justify-content-center  align-items-center p-2">
-                            <h3 class="accent-color font-1 fw-bold lh-1">0</h3>
+                            <h3 class="accent-color font-1 fw-bold lh-1">50</h3>
                             <h5 class="font-1 fw-bold">Completed Cases</h5>
                         </div>
                     </div>
                     <div class="col">
                         <div
                             class="card with-border-bottom border-0 shadow d-flex flex-column justify-content-center  align-items-center p-2">
-                            <h3 class="accent-color font-1 fw-bold lh-1">0</h3>
+                            <h3 class="accent-color font-1 fw-bold lh-1">100+</h3>
                             <h5 class="font-1 fw-bold">Nursing Staff</h5>
                         </div>
                     </div>
                     <div class="col">
                         <div
                             class="card with-border-bottom border-0 shadow d-flex flex-column justify-content-center  align-items-center p-2">
-                            <h3 class="accent-color font-1 fw-bold lh-1">0</h3>
+                            <h3 class="accent-color font-1 fw-bold lh-1">500+</h3>
                             <h5 class="font-1 fw-bold">Happy Patients</h5>
                         </div>
                     </div>
