--- a/index.html
+++ b/index.html
@@ -419,9 +419,9 @@
                     </div>
                     <h4 class="font-1 text-white fw-bold">We Care With Compassion</h4>
                     <p class="text-white" style="max-width: 768px;">
-                        Morbi vehicula risus scelerisque justo fermentum volutpat. Praesent lobortis nunc nec ligula
-                        elementum, sed accumsan ligula facilisis. Class aptent taciti sociosqu ad litora torquent per
-                        conubia nostra.
+                        it's our guiding principle at Grace Home Care.
+                         With unwavering empathy and genuine concern, our dedicated 
+                        team provides compassionate care to every individual we serve.
                     </p>
                 </div>
             </div>
@@ -437,9 +437,10 @@
                                 <h6 class="font-2 ">What They Say ?</h6>
                                 <h3 class="font-1 lh-1 fw-bold fs-1">Love To Serve You, With Compassionate Care</h3>
                                 <p class="fs-6">
-                                    Sed congue mollis orci et tempus. Etiam semper elit id turpis ornare posuere a sit
-                                    amet elit. Nulla facilisi. Nullam augue lectus, lobortis et risus id, ornare
-                                    porttitor arcu.
+                                    Our commitment to compassion ensures that you receive the highest 
+                                    quality of care in a nurturing and respectful environment. 
+                                    Trust us to be your partner in health and wellness,
+                                     where every interaction is infused with sincerity and kindness.
                                 </p>
                                 <div>
                                     <a href="contact.html" type="button" class="btn bg-accent-color-1 p-3">Contact Us</a>
@@ -462,17 +463,21 @@
                                                     <li><i class="fa-solid fa-star"></i></li>
                                                     <li><i class="fa-solid fa-star"></i></li>
                                                 </ul>
-                                                <p>Nulla mollis tristique blandit. Nam at accumsan felis, vitae pharetra
-                                                    nunc. Morbi imperdiet dui eu facilisis vestibulum. Sed dignissim non
-                                                    nibh auctor finibus. Integer mollis varius maximus.
+                                                <p>After my surgery, I needed temporary nursing care at home, 
+                                                    and I'm so grateful I chose Grace Home Care Service. 
+                                                    From the initial consultation to the day-to-day care, 
+                                                    their team was incredibly supportive and understanding. 
+                                                    They not only helped with medical needs but also provided
+                                                     emotional support during a challenging time. 
+                                                    I couldn't have asked for better care."
                                                 </p>
                                                 <div class="d-flex justify-content-between">
                                                     <div class="d-flex flex-row gap-3">
-                                                        <img src="image/" alt="profile"
+                                                        <img src="image/profile.jpg" alt="profile"
                                                             class="img-fluid rounded-circle" width="70" height="70">
                                                         <div class="d-flex flex-column h-100 justify-content-center">
-                                                            <span class="text-black">Anonymous</span>
-                                                            <span class="text-gray">*********</span>
+                                                            <span class="text-black">David Helbert</span>
+                                                            <span class="text-gray">Civil Servant</span>
                                                         </div>
                                                     </div>
                                                     <div class="accent-color" style="font-size: 3rem;">
@@ -491,17 +496,18 @@
                                                     <li><i class="fa-solid fa-star"></i></li>
                                                     <li><i class="fa-solid fa-star"></i></li>
                                                 </ul>
-                                                <p>Nulla mollis tristique blandit. Nam at accumsan felis, vitae pharetra
-                                                    nunc. Morbi imperdiet dui eu facilisis vestibulum. Sed dignissim non
-                                                    nibh auctor finibus. Integer mollis varius maximus.
+                                                <p>As a busy professional, 
+                                                    I needed reliable and trustworthy care for my mother who
+                                                     requires daily assistance. Grace Home Service 
+                                                    exceeded my expectations with their prompt and compassionate service. 
                                                 </p>
                                                 <div class="d-flex justify-content-between">
                                                     <div class="d-flex flex-row gap-3">
-                                                        <img src="image/image-pg" alt=""
+                                                        <img src="image/profile.jpg" alt=""
                                                             class="img-fluid rounded-circle" width="70" height="70">
                                                         <div class="d-flex flex-column h-100 justify-content-center">
-                                                            <span class="text-black">Anonymous</span>
-                                                            <span class="text-gray">*********</span>
+                                                            <span class="text-black">Grace Abaku</span>
+                                                            <span class="text-gray">HR Specialist</span>
                                                         </div>
                                                     </div>
                                                     <div class="accent-color" style="font-size: 3rem;">
@@ -520,17 +526,18 @@
                                                     <li><i class="fa-solid fa-star"></i></li>
                                                     <li><i class="fa-solid fa-star"></i></li>
                                                 </ul>
-                                                <p>Nulla mollis tristique blandit. Nam at accumsan felis, vitae pharetra
-                                                    nunc. Morbi imperdiet dui eu facilisis vestibulum. Sed dignissim non
-                                                    nibh auctor finibus. Integer mollis varius maximus.
+                                                <p>I can't thank [Nursing Care Service Name] enough for 
+                                                    the exceptional care they provided for my elderly father.
+                                                     The nurses were not only highly skilled
+                                                     and professional but also compassionate and attentive to his needs.
                                                 </p>
                                                 <div class="d-flex justify-content-between">
                                                     <div class="d-flex flex-row gap-3">
-                                                        <img src="image/imag400-3.jpg" alt=""
+                                                        <img src="image/profile.jpg" alt=""
                                                             class="img-fluid rounded-circle" width="70" height="70">
                                                         <div class="d-flex flex-column h-100 justify-content-center">
-                                                            <span class="text-black">Anonymous</span>
-                                                            <span class="text-gray">*********</span>
+                                                            <span class="text-black">Davies</span>
+                                                            <span class="text-gray">Social Ad Manager</span>
                                                         </div>
                                                     </div>
                                                     <div class="accent-color" style="font-size: 3rem;">
@@ -568,8 +575,8 @@
                                             Book Your Appointment
                                         </h5>
                                         <p class="text-gray m-0">
-                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus,
-                                            luctus nec ullamcorper mattis, pulvinar dapibus leo.
+                                            Book an appointment by simply 
+                                            clicking any call-to-action button or call the number sighted.
                                         </p>
                                     </div>
                                 </div>
@@ -582,8 +589,8 @@
                                             In Person Counselling
                                         </h5>
                                         <p class="text-gray m-0">
-                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus,
-                                            luctus nec ullamcorper mattis, pulvinar dapibus leo.
+                                            Looking for an In Person Counselling, do so by simply 
+                                            clicking any call-to-action button or call the number sighted.
                                         </p>
                                     </div>
                                 </div>
@@ -596,8 +603,8 @@
                                             Weekly Followup
                                         </h5>
                                         <p class="text-gray m-0">
-                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus,
-                                            luctus nec ullamcorper mattis, pulvinar dapibus leo.
+                                            Get a Weekly follow-up by simply 
+                                            clicking any call-to-action button or call the number sighted.
                                         </p>
                                     </div>
                                 </div>
@@ -637,7 +644,7 @@
                                                 class="fa-solid fa-xmark"></i></button>
                                     </div>
                                 </div>
-                                <form action="#"
+                                <form action="mailto:gracehomecareservicesector@gmail.com"
                                     class="d-flex flex-column h-100 justify-content-center w-100 needs-validation mb-3 form"
                                     novalidate>
                                     <div class="mb-3">
@@ -741,7 +748,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section>-->
 
     </main>
 
@@ -770,12 +777,11 @@
                     <div class="col col-lg-4 mb-3">
                         <div class="d-flex flex-column h-100 justify-content-center">
                             <div class="logo-container">
-                                <img src="image/logo-2.png" alt="Logo" class="img-fluid">
+                                <img src="image" alt="Your-Logo" class="img-fluid">
                             </div>
                             <p>
-                                Suspendisse congue tincidunt nisi, in eleifend metus placerat eu. Nunc eget tristique
-                                nisi. Nunc a eros vitae magna bibendum tempus. Mauris ipsum enim, sollicitudin sit amet
-                                consequat at.
+                                At Grace Home Care, We are ready to serve you excellently.
+                                Diagnosis and prescription is done by the Doctor, Nurses render care to you.
                             </p>
                         </div>
                     </div>
@@ -788,24 +794,7 @@
                                 <a href="#" class="d-flex flex-row gap-2 align-items-center link-light"><i
                                         class="fa-solid fa-chevron-right accent-color"></i> Services</a>
                                 <a href="#" class="d-flex flex-row gap-2 align-items-center link-light"><i
-                                        class="fa-solid fa-chevron-right accent-color"></i> Delivery</a>
-                                <a href="#" class="d-flex flex-row gap-2 align-items-center link-light"><i
-                                        class="fa-solid fa-chevron-right accent-color"></i> FAQ</a>
-                                <a href="#" class="d-flex flex-row gap-2 align-items-center link-light"><i
-                                        class="fa-solid fa-chevron-right accent-color"></i> Contact</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col col-lg-2 mb-3">
-                        <div class="d-flex flex-column">
-                            <h5 class="font-1 fw-bold mb-3">Information</h5>
-                            <div class="d-flex flex-column gap-2">
-                                <a href="#" class="d-flex flex-row gap-2 align-items-center link-light"><i
-                                        class="fa-solid fa-chevron-right accent-color"></i> About Us</a>
-                                <a href="#" class="d-flex flex-row gap-2 align-items-center link-light"><i
-                                        class="fa-solid fa-chevron-right accent-color"></i> Services</a>
-                                <a href="#" class="d-flex flex-row gap-2 align-items-center link-light"><i
-                                        class="fa-solid fa-chevron-right accent-color"></i> Delivery</a>
+                                        class="fa-solid fa-chevron-right accent-color"></i> Appointment</a>
                                 <a href="#" class="d-flex flex-row gap-2 align-items-center link-light"><i
                                         class="fa-solid fa-chevron-right accent-color"></i> FAQ</a>
                                 <a href="#" class="d-flex flex-row gap-2 align-items-center link-light"><i
@@ -816,11 +805,11 @@
                     <div class="col col-lg-4 mb-3">
                         <div class="d-flex flex-column mb-3">
                             <h5 class="font-1 fw-bold mb-2">Get In Touch</h5>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+                            <p>Kindly Keep in contact with us using the following details below. </p>
                             <div class="d-flex flex-wrap">
                                 <div class="d-flex flex-row me-2 gap-2 align-items-center">
                                     <i class="fa-solid fa-location-dot"></i>
-                                    99 Roving St., Pku
+                                    Abuja, Nigeria
                                 </div>
                                 <div class="d-flex flex-row me-2 gap-2 align-items-center">
                                     <i class="fa-solid fa-phone"></i>
@@ -828,7 +817,7 @@
                                 </div>
                                 <div class="d-flex flex-row me-2 gap-2 align-items-center">
                                     <i class="fa-solid fa-envelope"></i>
-                                    hello@awesomesite.com
+                                    gracehomecareservicesector@gmail.com
                                 </div>
                             </div>
                         </div>
@@ -841,18 +830,18 @@
                                 <a href="https://www.twitter.com/" class="social-item">
                                     <i class="fa-brands fa-twitter"></i>
                                 </a>
-                                <a href="https://www.youtube.com/" class="social-item">
-                                    <i class="fa-brands fa-youtube"></i>
+                                <a href="https://www.instagram.com/grace_homecare_services" class="social-item">
+                                    <i class="fa-brands fa-instagram"></i>
                                 </a>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="w-100" style="border-bottom: 1px solid var(--accent-color-2);"></div>
-                <div class="text-center p-2">© Copyright 2023. All Rights Reserved. Rometheme</div>
+                <div class="text-center p-2">© Copyright 2024. All Rights Reserved. GraceHomeCare</div>
             </div>
         </section>
-    </footer>-->
+    </footer>
 
     <script src="js/vendor/fslightbox.js"></script>
     <script src="js/masonry.js"></script>
