--- a/index.html
+++ b/index.html
@@ -201,20 +201,13 @@
                                 <div class="col mb-2">
                                     <div class="d-flex flex-row gap-2 align-items-center">
                                         <i class="fa-solid fa-circle-arrow-right accent-color"></i>
-                                        <span class="text-gray">Proin euismod mollis ex vel
-                                        </span>
-                                    </div>
-                                </div>
-                                <div class="col mb-2">
-                                    <div class="d-flex flex-row gap-2 align-items-center">
-                                        <i class="fa-solid fa-circle-arrow-right accent-color"></i>
                                         <span class="text-gray">Getting Consultation at home</span>
                                     </div>
                                 </div>
                                 <div class="col mb-2">
                                     <div class="d-flex flex-row gap-2 align-items-center">
                                         <i class="fa-solid fa-circle-arrow-right accent-color"></i>
-                                        <span class="text-gray">Monitoring patients (young and old) till fully recovered both home and abroad.</span>
+                                        <span class="text-gray">Monitoring patients till fully recovered both home and abroad.</span>
                                     </div>
                                 </div>
                                 <div class="col mb-2">
